Fixing a lot of layout issues.

--- a/assets/css/font-awesome/font-awesome.css
+++ b/assets/css/font-awesome/font-awesome.css
@@ -20,6 +20,7 @@
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: .5rem;
 }
 
 /* makes the font 33% larger relative to the icon container */
